--- a/Social Media Site/appsettings.json
+++ b/Social Media Site/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=SocialMediaDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=tcp:ryansucks.database.windows.net,1433;Initial Catalog=social;Persist Security Info=False;User ID=bynx;Password=Test123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
